test:sign up test succesfully

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
+<h2>Sejam bem vindos(as) ao Pousada App</h2>
+<p>Aqui você encontrará as melhores pousadas para sua acomodação!</p>
+
 <section aria-label="Algumas Pousadas">
   <% @guesthouses.each do |gh| %>
     <dl>
