feat:edit guesthouse page
created views and routes

--- a/app/views/guesthouses/show.html.erb
+++ b/app/views/guesthouses/show.html.erb
@@ -20,4 +20,8 @@
       <dd><%= t("payment_methods.#{payment_method.method}") %></dd>
     <% end %>
   </dl>
+
+  <p>
+    <%= link_to 'Editar Pousada', edit_guesthouse_path(@guesthouse.id) %>
+  </p>
 </article>
