feat:link to owner see his guesthouse

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
         </ul>
       </nav>
       <div>
+        <% if current_user&.guesthouse_owner %>
+          <%= link_to 'Minha Pousada', guesthouse_path(current_user.guesthouse_owner.guesthouse) %>
+        <% end %>
         <% if user_signed_in? %>
           <p><%= current_user.email %></p>
           <%= button_to "Sair", destroy_user_session_path, method: :delete %>
