--- a/app/views/guesthouses/show.html.erb
+++ b/app/views/guesthouses/show.html.erb
@@ -22,6 +22,10 @@
   </dl>
 
   <p>
+    <%= link_to 'Quartos', guesthouse_rooms_path(@guesthouse.id) %>
+  </p>
+
+  <p>
     <% if @guesthouse.guesthouse_owner.user == current_user %>
       <%= link_to 'Editar Pousada', edit_guesthouse_path(@guesthouse.id) %>
     <% end %>
