--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -6,7 +6,7 @@
 
   <div>
     <%#= link_to "Edit this room", edit_room_path(@room) %>
-    <%= link_to "Back to rooms", guesthouse_rooms_path(@guesthouse) %>
+    <%= link_to "Voltar", guesthouse_rooms_path(@guesthouse) %>
   </div>
 
 </section>
