feat:created page to edit room

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -16,6 +16,8 @@
           <dd><%= room.max_people %></dd>
           <dt>Valor da Diária:</dt>
           <dd><%= number_to_currency(room.daily_rate, unit: 'R$ ', separator: ',', delimiter: '.') %></dd>
+          <dt>Disponibilidade:</dt>
+          <dd><%= room.available == true ? 'Sim' : 'Não' %></dd>
         </dl>
       <% end %>
     </div>
