--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,11 @@
       </div>
     </header>
     <main>
-      <p>
+      <p style="color: red">
         <%= flash[:alert] %>
-        <%= flash[:notice] %>
+      </p>
+      <p style="color: green">
+        <%= notice %>
       </p>
       <%= yield %>
     </main>
