fix:refactored back page links

--- a/app/views/guesthouses/show.html.erb
+++ b/app/views/guesthouses/show.html.erb
@@ -1,5 +1,5 @@
 <article>
-  <h2>Pousada <%= @guesthouse.brand_name %></h2>
+  <h2><%= @guesthouse.brand_name %></h2>
   <p>Conheça a pousada</p>
 
   <dl>
