fix: Guesthouse#only_one_guesthouse_per_owner
refactored the method to allow only one owner.

Also refactored payment methods translations

--- a/app/views/guesthouses/_form.html.erb
+++ b/app/views/guesthouses/_form.html.erb
@@ -117,7 +117,7 @@
                         guesthouse.payment_method_ids.include?(payment_method.id),
                         id: "payment_method_#{payment_method.id}" %>
       <%= label_tag "payment_method_#{payment_method.id}",
-                    t("payment_methods.#{payment_method.method}") %>
+                    t("#{payment_method.method}") %>
     <% end %>
   </fieldset>
 
