--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,29 +10,7 @@
   </head>
 
   <body>
-    <header>
-      <h1>Pousada App</h1>
-      <nav>
-        <ul>
-          <li><%= link_to "Início", root_path %></li>
-          <!-- <li><%#= link_to "Pousadas", guesthouses_path %></li>-->
-        </ul>
-      </nav>
-      <div>
-        <% if current_user&.guesthouse_owner&.guesthouse %>
-          <% id = current_user&.guesthouse_owner&.guesthouse&.id || 1 %>
-          <%= link_to 'Minha Pousada', guesthouse_path(id) %>
-        <% end %>
-        <% if user_signed_in? %>
-          <p><%= current_user.email %></p>
-          <%= button_to "Sair", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <% unless current_page?(user_session_path) || current_page?(new_user_registration_path) %>
-            <%= link_to "Entrar", new_user_session_path %>
-          <% end %>
-        <% end %>
-      </div>
-    </header>
+    <%= render 'shared/header' %>
     <hr>
     <main>
       <p style="color: red">
