--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <aside>
-  <%= form_tag search_guesthouses_path, method: :get, id: 'search_form' do %>
+  <%= form_tag search_by_city_guesthouses_path, method: :get, id: 'search_form' do %>
     <%= label_tag :city, "Buscar por Cidade:" %>
     <%= select_tag :city, options_for_select(@cities.map { |city| [city, city] },
                                              params[:city]), prompt: "Selecione uma Cidade" %>
