--- a/app/views/rooms/_basic_room.html.erb
+++ b/app/views/rooms/_basic_room.html.erb
@@ -1,12 +1,11 @@
 <article>
   <h2>Quartos</h2>
-  <% if @guesthouse.guesthouse_owner.user == current_user %>
-    <%= link_to "Cadastrar Quartos", new_guesthouse_room_path(@guesthouse) %> |
+  <% if guesthouse.guesthouse_owner.user == current_user %>
+    <%= link_to "Cadastrar Quartos", new_guesthouse_room_path(guesthouse) %> |
   <% end %>
-  <%= link_to "Voltar", guesthouse_path(@guesthouse) %>
     <div id="rooms">
-      <% @rooms.each do |room| %>
-        <h3><%= link_to room.name, guesthouse_room_path(@guesthouse, room) %></h3>
+      <% rooms.each do |room| %>
+        <h3><%= link_to room.name, guesthouse_room_path(guesthouse, room) %></h3>
         <dl>
           <dt>Descrição:</dt>
           <dd><%= room.description %></dd>
@@ -16,8 +15,10 @@
           <dd><%= room.max_people %></dd>
           <dt>Valor da Diária:</dt>
           <dd><%= number_to_currency(room.daily_rate, unit: 'R$ ', separator: ',', delimiter: '.') %></dd>
-          <dt>Disponibilidade:</dt>
-          <dd><%= room.available == true ? 'Sim' : 'Não' %></dd>
+          <% if guesthouse.guesthouse_owner.user == current_user %>
+            <dt>Disponibilidade:</dt>
+            <dd><%= room.available == true ? 'Sim' : 'Não' %></dd>
+          <% end %>
         </dl>
       <% end %>
     </div>
