--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,29 +1,30 @@
 <article>
   <h2>Detalhes</h2>
-  <%= link_to "Voltar", guesthouse_rooms_path(@guesthouse) %>
-
-  <%= render 'room', room: @room, guesthouse: @guesthouse  %>
-  <p>
-    <% if @guesthouse.guesthouse_owner.user == current_user %>
-      <%= link_to 'Editar Quarto', edit_guesthouse_room_path(@guesthouse, @room) %>
-    <% end %>
-  </p>
-
+  <%= link_to "Voltar", guesthouse_path(@guesthouse) %>
   <section>
-    <h3>Diárias por Período</h3>
+    <%= render 'room', room: @room, guesthouse: @guesthouse  %>
     <p>
       <% if @guesthouse.guesthouse_owner.user == current_user %>
-        <%= link_to "Criar Diária por Período", new_guesthouse_room_room_rate_path(@guesthouse, @room) %>
+        <%= link_to 'Editar Quarto', edit_guesthouse_room_path(@guesthouse, @room) %>
       <% end %>
     </p>
-    <div id="room_rates">
-      <% @room.room_rates.each do |room_rate| %>
-        <%= render 'room_rates/room_rate', room: @room, guesthouse: @guesthouse, room_rate: room_rate %>
-        <%= link_to 'Editar essa Diária', edit_guesthouse_room_room_rate_path(@guesthouse, @room, room_rate) %>
-    <% end %>
-    <% if @room.room_rates.empty? %>
-      <p>Não há diárias cadastradas para este quarto.</p>
-    <% end %>
-    </div>
   </section>
+
+  <% if @guesthouse.guesthouse_owner.user == current_user %>
+    <section  id="room_rates">
+      <h3>Diárias por Período</h3>
+      <p>
+        <%= link_to "Criar Diária por Período", new_guesthouse_room_room_rate_path(@guesthouse, @room) %>
+      </p>
+      <% @room.room_rates.each do |room_rate| %>
+        <div>
+          <%= render 'room_rates/room_rate', room: @room, guesthouse: @guesthouse, room_rate: room_rate %>
+          <%= link_to 'Editar essa Diária', edit_guesthouse_room_room_rate_path(@guesthouse, @room, room_rate) %>
+        </div>
+      <% end %>
+      <% if @room.room_rates.empty? %>
+        <p>Não há diárias cadastradas para este quarto.</p>
+      <% end %>
+    </section>
+  <% end %>
 </article>
