fix:corrected room_rates routes
after diminish nesting routes

--- a/app/views/room_rates/_form.html.erb
+++ b/app/views/room_rates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [guesthouse, room, room_rate]) do |form| %>
+<%= form_with(model: [room, room_rate]) do |form| %>
   <% if room_rate.errors.any? %>
     <div style="color: red">
       <ul>
