--- a/app/views/room_rates/new.html.erb
+++ b/app/views/room_rates/new.html.erb
@@ -1,7 +1,7 @@
 <article>
   <h2>Nova Diária por Período</h2>
 
-  <%= render "form", room_rate: @room_rate, room: @room, guesthouse: @guesthouse %>
+  <%= render "form", room_rate: @room_rate, room: @room %>
 
   <p>
     <%= link_to "Voltar para o Quarto", guesthouse_room_path(@guesthouse, @room) %>
