feat:booking form page

--- a/app/views/rooms/_basic_room.html.erb
+++ b/app/views/rooms/_basic_room.html.erb
@@ -22,9 +22,9 @@
             <% end %>
           </dl>
           <p>
-
+            <%= link_to "Reservar", new_room_booking_path(room) %>
           </p>
-        </section>
+      </section>
       <% end %>
     </div>
 </article>
