--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [room, booking], url: room_verify_availability_path, method: :post) do |f| %>
+<%= form_with(model: [room, booking], url: room_availability_path(room), method: :post) do |f| %>
   <% if booking.errors.any? %>
     <div style="color: red">
       <ul>
