--- a/app/views/bookings/final_confirmation.html.erb
+++ b/app/views/bookings/final_confirmation.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @booking, url: room_final_confirmation_path(@room)) do |f| %>
+<%= form_with(model: @booking, url: room_bookings_path(@room)) do |f| %>
     <p>
       <%= f.label :check_in_date %>
       <%= f.date_field :check_in_date, value: @booking.check_in_date, readonly: true %>
