feat:guest concludes booking creation
and is redirected to show booking view

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -21,7 +21,7 @@
     </p>
     <p>
       <%= f.label :number_of_guests %>
-      <%= f.number_field :number_of_guests %>
+      <%= f.number_field :number_of_guests, min: 1%>
     </p>
   </fieldset>
   <p>
