--- a/app/views/bookings/confirm.html.erb
+++ b/app/views/bookings/confirm.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_field :number_of_guests, value: @booking.number_of_guests, readonly: true %>
     </p>
     <p>
-      Preço Total: <%= number_to_currency(@total_price, unit: 'R$ ', separator: ',', delimiter: '.') %>
+      Preço Total: <%= number_to_currency(@booking.get_total_price, unit: 'R$ ', separator: ',', delimiter: '.') %>
     </p>
   <p>
     <%= f.submit 'Prosseguir com a Reserva' %>
