test:user cancels bookings list

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -16,6 +16,11 @@
     </tr>
     </thead>
     <tbody>
+    <% if @bookings.empty? %>
+      <tr>
+        <td colspan="8" style="color: red">Nenhuma reserva encontrada</td>
+      </tr>
+    <% end %>
     <% @bookings.each do |booking| %>
       <tr>
         <td><%= booking.reservation_code %></td>
